Shutdown Process : Applications can now be launched in USER_APP_TERMINATION_PHASE

User can now launch applications in USER_APP_TERMINATION_PHASE (like
when there is a dialog to save an open document). Fixes #3811 : System
enters "shutdown mode" too early.